--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -11,8 +11,8 @@ html {
 }
 
 body {
-  font-family: "Courier New", Courier, monospace;
-  background-color: #f0f8fe;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  background-color: whitesmoke;
   line-height: 1.3;
   margin: 0px;
   padding: 0px;
