--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -12,8 +12,13 @@ html {
 
 body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: whitesmoke;
+  background-color: #f4f0ef;
   line-height: 1.3;
   margin: 0px;
   padding: 0px;
+}
+
+p {
+  font-size: 1.5rem;
+  font-weight: 200;
 }
