--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -14,15 +14,10 @@ html {
 
 body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: whitesmoke;
+  background-color: #f4f0ef;
   line-height: 1.3;
   margin: 0px;
   padding: 0px;
-}
-
-.aniImage {
-  width: 100%;
-  height: 200px;
 }
 
 p {
@@ -30,19 +25,19 @@ p {
   font-weight: 200;
 }
 
-header {
-  background-color: black;
-  padding: 5%;
+.pageHeader {
+  background-image: url("../assets/wood.jpeg");
   text-align: center;
   color: white;
+  padding: 5%;
 }
 
-header h1 {
+.pageHeader h1 {
   font-size: 300%;
   margin: 7%;
 }
 
-header nav {
+.pageHeader .navbar {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -54,10 +49,6 @@ header nav {
       justify-content: space-around;
   list-style: none;
   font-size: larger;
-}
-
-.logo {
-  font-weight: bold;
 }
 
 main p {
@@ -79,9 +70,90 @@ main .flex-container {
 }
 
 main .flex-item {
-  padding: 5px;
-  width: 20%;
-  height: 150px;
+  background-color: white;
   margin-top: 10px;
+  padding: 5px;
+  height: 70%;
+  width: 30%;
+  border-radius: 10px;
+}
+
+main .flex-header p {
+  font-size: 14px;
+  margin: 0 0 1rem;
+  color: #7a7a8c;
+  text-align: left;
+}
+
+main .flex-header h2 {
+  font-size: 20px;
+  margin: 0.25rem 0 auto;
+  text-decoration: none;
+  color: inherit;
+  border: 0;
+  display: inline-block;
+  cursor: pointer;
+}
+
+main .flex-item:hover {
+  -webkit-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  -webkit-transform: translateY(-1rem);
+          transform: translateY(-1rem);
+}
+
+main .aniImage {
+  width: 80%;
+  margin-left: 10%;
+  margin-top: 50px;
+  height: 200px;
+  border: 3px solid black;
+  border-radius: 10px;
+}
+
+main .flex-author {
+  margin: 3rem 0 0;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 75px 1fr;
+      grid-template-columns: 75px 1fr;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+
+main .author-avatar {
+  grid-area: auto;
+  -ms-flex-item-align: start;
+      -ms-grid-row-align: start;
+      align-self: start;
+  position: relative;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+main .author-avatar img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  -webkit-filter: grayscale(100%);
+          filter: grayscale(100%);
+  display: block;
+  overflow: hidden;
+  margin: 16px 10px;
+}
+
+main .half-circle {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 60px;
+  height: 48px;
+  fill: none;
+  stroke: #ff8a00;
+  stroke-width: 8;
+  stroke-linecap: round;
+  pointer-events: none;
 }
 /*# sourceMappingURL=style.css.map */
