--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -5,7 +5,7 @@
 .pageHeader {
   background-image: url("../assets/wood.jpeg");
   text-align: center;
-  color: white;
+  color: #ffffff;
   padding: 5%;
 
   h1 {
@@ -39,7 +39,7 @@ main {
 
   // A card
   .flex-item {
-    background-color: white;
+    background-color: #ffffff;
     margin-top: 10px;
     padding: 5px;
     height: 70%;
@@ -68,7 +68,7 @@ main {
 
   // If we hover over the item
   .flex-item:hover {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 8px 16px 0 #00000033;
     transform: translateY(-1rem);
   }
 
@@ -78,7 +78,7 @@ main {
     margin-left: 10%;
     margin-top: 50px;
     height: 200px;
-    border: 3px solid black;
+    border: 3px solid #000000;
     border-radius: 10px;
   }
 
